# laravel.spu123.com/app/Http/Controllers/CategoryController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Models\Category;
+use Validator;
 use Illuminate\Http\Request;
 
 class CategoryController extends Controller
@@ -49,8 +50,148 @@ class CategoryController extends Controller
      */
     public function create(Request $request) {
         $input = $request->all();
+        $message = array(
+            'name.required'=>'Вкажіть назву категорії',
+            'image.required'=>'Вкажіть фото категорії',
+            'description.required'=>'Вкажіть опис категорії'
+        );
+        $validation = Validator::make($input,[
+            'name'=>'required',
+            'image'=>'required',
+            'description'=>'required',
+        ],$message);
+        if($validation->fails()){
+            return response()->json($validation->errors(), 400,
+                ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+        }
+
         $category = Category::create($input);
         return response()->json($category, 201,
             ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
     }
+    /**
+     * @OA\Get(
+     *     tags={"Category"},
+     *     path="/api/category/{id}",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="List Categories."),
+     * @OA\Response(
+     *    response=404,
+     *    description="Wrong id",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Sorry, wrong Category Id has been sent. Pls try another one.")
+     *        )
+     *     )
+     * )
+     */
+    public function getById($id) {
+        $category = Category::findOrFail($id);
+        return response()->json($category, 200,
+            ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+    }
+
+    /**
+     * @OA\Post(
+     *     tags={"Category"},
+     *     path="/api/category/edit/{id}",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"name"},
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Add Category.")
+     * )
+     */
+    public function put($id, Request $request) {
+        $category = Category::findOrFail($id);
+        $input = $request->all();
+        $message = array(
+            'name.required'=>'Вкажіть назву категорії',
+            'image.required'=>'Вкажіть фото категорії',
+            'description.required'=>'Вкажіть опис категорії'
+        );
+        $validation = Validator::make($input,[
+            'name'=>'required',
+            'image'=>'required',
+            'description'=>'required',
+        ],$message);
+        if($validation->fails()){
+            return response()->json($validation->errors(), 400,
+                ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+        }
+        $category->update($input);
+        return response()->json($category, 200,
+            ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/category/{id}",
+     *     tags={"Category"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Ідентифікатор категорії",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Успішне видалення категорії"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Категорії не знайдено"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Не авторизований"
+     *     )
+     * )
+     */
+    public function delete($id) {
+        $category = Category::findOrFail($id);
+        $category->delete();
+        return response()->json("delete", 204,
+            ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
+    }
+
+
 }
